# PdfMod

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
pypdf/: __init__.py  pypdf.py
