[tool.poetry]
name = "pypdf"
version = "0.1.1"
description = ""
authors = ["aoout <wuz66280@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.4.0"
pymupdf = "^1.21.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[tool.poetry.scripts]
pypdf = "pypdf:main"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
